style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
}

/*Pseudo class to set color theme*/
:root {
  --white-color: #fff;
  --dark-color: #000;
  --primary-color: #ffdbe5;
  --secondary-color: #f4bbc9;
  --tertiary-color: #bb294e;
  --quartinary-color: #6c0820;

  --font-size-s: 0.9rem;
  --font-size-n: 1rem;
  --font-size-m: 1.12rem;
  --font-size-l: 1.5rem;
  --font-size-xl: 2rem;
  --font-size-xxl: 3rem;

  --border-radius-circle: 50%;
  --border-radius-rectangle: 10px;
  --box-shadow: 0px 0px 20px 0px rgb(0 0 0 / 0.2);

  --site-max-width: 1300px;
}

/* Navbar styling */

.section-content {
  margin: 0 auto;
  padding: 0 20px;
  max-width: var(--site-max-width);
}

header {
  position: fixed;
  width: 100%;
  z-index: 5;
  background: var(--primary-color);
  padding: 10px;
}

header .navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 15px;
}

.navbar .nav-logo {
  border: solid 1px;
  border-radius: var(--border-radius-circle);
  border-color: var(--dark-color);
}

.navbar .nav-logo .logo-text {
  color: var(--dark-color);
  font-size: var(--font-size-xl);
  font-family: "Dancing Script";
}

.navbar .nav-menu {
  display: flex;
  gap: 10px;
}

.navbar .nav-menu .nav-link {
  padding: 10px 18px;
  border-radius: var(--border-radius-rectangle);
  font-size: var(--font-size-m);
  background: var(--secondary-color);
  transition: 0.3s ease;
  color: var(--quartinary-color);
  font-weight: bold;
}

.navbar .nav-menu .nav-link:hover {
  color: var(--secondary-color);
  background-color: var(--tertiary-color);
}

a {
  text-decoration: none;
}

ul {
  list-style: none;
}

/* Hero styling first page*/

.hero-section {
  min-height: 100vh;
  background: var(--primary-color);
}

.other-page .hero-section {
  padding-top: 130px;
  min-height: 100vh;
  background: var(--primary-color);
}

.home-page .hero-section .section-content {
  min-height: 100vh;
  display: flex;
  align-items: center;
  color: var(--white-color);
  justify-content: space-between;
}

.other-page .hero-section .section-content {
  display: flex;
  align-items: center;
  color: var(--white-color);
  justify-content: space-between;
}

.hero-section .hero-details .title {
  font-size: var(--font-size-xxl);
  color: var(--dark-color);
  font-family: "Dancing Script";
}

.hero-section .hero-details .subtitle {
  margin-top: 8px;
  margin-bottom: 8px;
  font-size: var(--font-size-xl);
  color: var(--dark-color);
  display: flex;
  align-items: center;
  gap: 10px;
}

.line {
  flex: 1;
  height: 1px;
  background-color: var(--secondary-color);
}

.hero-section .hero-details .description {
  font-size: var(--font-size-m);
  color: var(--dark-color);
  max-width: 80%;
  margin: 24px 0 40px;
  line-height: 2rem;
}

.hero-section .hero-details .description-wrapper {
  display: flex;
  justify-content: start;
}

.hero-section .hero-details .button {
  padding: 10px 26px;
  border-radius: var(--border-radius-rectangle);
  font-size: var(--font-size-m);
  color: var(--dark-color);
  background-color: var(--secondary-color);
  border: 2px solid transparent;
  transition: 0.3s ease;
  color: var(--quartinary-color);
  font-weight: bold;
}

.hero-section .hero-details .button:hover {
  color: var(--primary-color);
  border: 2px solid transparent;
  background-color: var(--secondary-color);
}

.other-page .hero-image-wrapper .hero-image {
  max-width: 500px;
  height: 300px;
  object-fit: cover;
  box-shadow: var(--box-shadow);
}

.home-page .hero-image-wrapper .hero-image {
  max-width: 500px;
  margin-right: 30px;
  height: 300px;
  object-fit: cover;
  box-shadow: var(--box-shadow);
}

.google-maps {
  color: var(--tertiary-color);
}

/*Bilder styling */

.image-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background: var(--primary-color);
  align-items: center;
}

img {
  padding: 5px;
  max-width: 100%;
}

.image-column {
  display: flex;
  flex-direction: column;
  padding: 5px;
}

/* Responsive styling */

@media screen and (max-width: 1140px) {
  :root {
    --font-size-m: 1rem;
    --font-size-l: 1.3rem;
    --font-size-xl: 1.5rem;
    --font-size-xxl: 1.8rem;

    --site-max-width: 900px;
  }

  .navbar .nav-menu {
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 10px;
  }

  .navbar .nav-menu .nav-link {
    background: none;
  }

  header .navbar {
    flex-direction: column;
    gap: 25px;
  }

  header {
    position: relative;
    height: auto;
  }

  .other-page .hero-section {
    padding-top: 0px;
  }

  .home-page .hero-section .section-content {
    justify-content: initial;
  }

  .hero-section .section-content {
    flex-direction: column;
    align-items: center;
    min-height: auto;
  }

  .hero-section .section-content .hero-details {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 30px;
  }

  .hero-section .section-content .hero-details .description {
    text-align: center;
  }

  .hero-section .section-content .hero-details .title {
    max-width: 330px;
  }

  .other-page .hero-section .hero-details .description-wrapper {
    flex-direction: column;
  }

  .other-page .hero-section .hero-details .description-wrapper .hero-image {
    width: 330px;
  }

  .other-page .hero-section .hero-details .description {
    width: 390px;
  }

  .hero-section .section-content .hero-details .button {
    font-weight: bold;
  }

  .hero-image-wrapper .hero-image {
    margin: 0;
    margin-top: 25px;
    width: 100%;
  }
}

